# Foragax

./: Forajax_env.ipynb  README.md  project.toml  pyproject.toml  wolf_sheep.ipynb
.github/workflows/: main.yml
agent/: forager_v2.py  forager_v3.py  resource_v2.py
base/: agent_classes.py  agent_methods.py  space_classes.py  space_methods.py
docs/: CNAME  index.md
examples/basic/: README.md
examples/basic/hello_world/: hello_world.ipynb
examples/basic/wolf_sheep_grass/: sim.ipynb
examples/hello_world/: hello_world.ipynb
examples/many_agent_foraging/: sim.py
examples/many_agent_systems/foraging_agents/EcoEvoJax/: sim.ipynb  sim.py
examples/wolf_sheep_grass/: sim.ipynb
examples/wolf_sheep_grass/rec_data/149/default/: checkpoint
foragax/base/: agent_class_new.py  agent_classe.py  agent_classes.py  agent_method.py  agent_methods.py  agent_methods_new.py  dice_test.ipynb  space_methods.py  test.ipynb
foragax/policy/: random_policy.py  wilson_cowan.py
joss_paper/: paper.bib  paper.md
src/foragax/base/: agent_methods.py  space_methods.py
src/foragax/policy/: random_policy.py  wilson_cowan.py
world/: foraging_world.py  foraging_world_v2.py  output_file.out  run.sh  slurm-6878933.out
world/orbax/175999/default/: _METADATA
