[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foragax"
version = "0.0.1"
description = "ABM package in JAX."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = "~=3.10"
authors = [
    {name = "Siddharth Chaturvedi", email = "sidchat.sc@gmail.com"},
    ]
keywords = ["jax", "abm", "agent-based-modeling", "simulation", "foraging", "foragax", "ABM", "Agent-Based-Modeling"]
url = {repository = "https://github.com/i-m-iron-man/Foragax"}
dependencies = [
    "jax>=0.4.13",
    "flax>=0.7.4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: English",
]   
[tool.hatch.build]
include = ["src/foragax/*"]


    